# non

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  logging.yaml  non.desktop  non.glade  non.py  pyproject.toml  setup.cfg  setup.py
data/: KnightsOfNi.desktop  non
log/: logging.yaml
non/: __init__.py  application.py  info.py  logging.yaml  non.py
non/templates/: summary.md  summary_css.md
non/ui/: NoN.pot  de.mo  de.po  non.glade
non/ui/locale/de/LC_MESSAGES/: NoN.mo
