[metadata]
name = non
version = 0.81
description = Knights Of Ni - a GTK+ manager for your Nikola powered website
long_description = file: README.md 
long_description_content_type = text/markdown
author = Anke K
author_email = An.Ke@bahnfreikartoffelbrei.de
url = https://github.com/encarsia/non
license = MIT
keywords = Nikola, staticgen, GTK

[options]
packages = non
python_requires = >=3.6
#package_dir = 
#    = non
install_requires =
    Nikola
    PyGObject
    PyYAML
include_package_data = True

[options.data_files]
share/applications =
    data/non.desktop
share/icons/hicolor/scalable/apps =
    non/ui/duckyou.svg
bin = 
    data/non

[options.package_data]
non = 
    ui/*
    logging.yaml

